# simple-c-algorithms

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: list.h  misc.h  sort.h  utils.h
src/: main.c  misc.c  sort.c  utils.c
tests/: CMakeLists.txt
tests/sort/: test_bubble_sort.c  test_insertion_sort.c  test_merge_sort.c  test_selection_sort.c
tests/utils/: test_swap.c
